--- a/ElTallerDelMaestroWebPage/src/index.html
+++ b/ElTallerDelMaestroWebPage/src/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
     <link
